--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = 5000
+MONGO_DB_CONNECTION_URL = "mongodb+srv://nidamnurikishore217:eZuLyIK5fip4Z815@ecommers.oieop.mongodb.net/e-commerce"
+JWT_SECRET="ABCDE"
